test/echo-prober-cilium-l7/config-dump.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "host~127.0.0.1~no-id~localdomain",
     "cluster": "ingress-cluster",
     "user_agent_name": "envoy",
     "user_agent_build_version": {
      "version": {
       "major_number": 1,
       "minor_number": 21,
       "patch": 5
      },
      "metadata": {
       "revision.status": "Distribution",
       "build.type": "RELEASE",
       "revision.sha": "48cbb2f88edca93ba80d1135dbb067a827b8adc2",
       "ssl.version": "BoringSSL"
      }
     },
     "extensions": [
      {
       "name": "cilium.l7policy",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.ext_authz",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.dynamic_forward_proxy",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.ext_authz",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.local_ratelimit",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.ratelimit",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.router",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.set_metadata",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.local_rate_limit",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.rate_limit",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.router",
       "category": "envoy.filters.http"
      },
      {
       "name": "match-wrapper",
       "category": "envoy.filters.http"
      },
      {
       "name": "skip",
       "category": "envoy.matching.action"
      },
      {
       "name": "envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
       "category": "envoy.upstream_options"
      },
      {
       "name": "envoy.upstreams.http.http_protocol_options",
       "category": "envoy.upstream_options"
      },
      {
       "name": "cilium.bpf_metadata",
       "category": "envoy.filters.listener",
       "version": {
        "version": {
         "major_number": 1,
         "minor_number": 1
        },
        "metadata": {
         "": ""
        }
       }
      },
      {
       "name": "envoy.filters.listener.tls_inspector",
       "category": "envoy.filters.listener"
      },
      {
       "name": "envoy.listener.tls_inspector",
       "category": "envoy.filters.listener"
      },
      {
       "name": "cilium.network",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.ext_authz",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.connection_limit",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.ext_authz",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.http_connection_manager",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.local_ratelimit",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.mongo_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.mysql_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.ratelimit",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.sni_cluster",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.sni_dynamic_forward_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.tcp_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.http_connection_manager",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.mongo_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.ratelimit",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.tcp_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.connection_pools.tcp.generic",
       "category": "envoy.upstreams"
      },
      {
       "name": "envoy.http.original_ip_detection.xff",
       "category": "envoy.http.original_ip_detection"
      },
      {
       "name": "envoy.grpc_credentials.default",
       "category": "envoy.grpc_credentials"
      },
      {
       "name": "request-headers",
       "category": "envoy.matching.http.input"
      },
      {
       "name": "request-trailers",
       "category": "envoy.matching.http.input"
      },
      {
       "name": "response-headers",
       "category": "envoy.matching.http.input"
      },
      {
       "name": "response-trailers",
       "category": "envoy.matching.http.input"
      },
      {
       "name": "envoy.extensions.network.socket_interface.default_socket_interface",
       "category": "envoy.bootstrap"
      },
      {
       "name": "envoy.network.dns_resolver.cares",
       "category": "envoy.network.dns_resolver"
      },
      {
       "name": "envoy.quic.proof_source.filter_chain",
       "category": "envoy.quic.proof_source"
      },
      {
       "name": "envoy.request_id.uuid",
       "category": "envoy.request_id"
      },
      {
       "name": "envoy.watchdog.abort_action",
       "category": "envoy.guarddog_actions"
      },
      {
       "name": "envoy.metrics_service",
       "category": "envoy.stats_sinks"
      },
      {
       "name": "envoy.stat_sinks.metrics_service",
       "category": "envoy.stats_sinks"
      },
      {
       "name": "envoy.tls.cert_validator.default",
       "category": "envoy.tls.cert_validator"
      },
      {
       "name": "cilium.tls_wrapper",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.transport_sockets.quic",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.transport_sockets.raw_buffer",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.transport_sockets.tls",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "raw_buffer",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "tls",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.cluster.eds",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.logical_dns",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.original_dst",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.static",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.strict_dns",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.clusters.dynamic_forward_proxy",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.ip",
       "category": "envoy.resolvers"
      },
      {
       "name": "cilium.tls_wrapper",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.transport_sockets.quic",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.transport_sockets.raw_buffer",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.transport_sockets.tls",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "raw_buffer",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "tls",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.quic.crypto_stream.server.quiche",
       "category": "envoy.quic.server.crypto_stream"
      }
     ]
    },
    "static_resources": {
     "clusters": [
      {
       "name": "egress-cluster",
       "type": "ORIGINAL_DST",
       "connect_timeout": "1s",
       "lb_policy": "CLUSTER_PROVIDED",
       "cleanup_interval": "1.500s",
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "common_http_protocol_options": {
          "max_connection_duration": "0s",
          "max_requests_per_connection": 0
         },
         "use_downstream_protocol_config": {}
        }
       }
      },
      {
       "name": "egress-cluster-tls",
       "type": "ORIGINAL_DST",
       "connect_timeout": "1s",
       "lb_policy": "CLUSTER_PROVIDED",
       "cleanup_interval": "1.500s",
       "transport_socket": {
        "name": "cilium.tls_wrapper"
       },
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "common_http_protocol_options": {
          "max_connection_duration": "0s",
          "max_requests_per_connection": 0
         },
         "upstream_http_protocol_options": {
          "auto_sni": true,
          "auto_san_validation": true
         },
         "use_downstream_protocol_config": {}
        }
       }
      },
      {
       "name": "ingress-cluster",
       "type": "ORIGINAL_DST",
       "connect_timeout": "1s",
       "lb_policy": "CLUSTER_PROVIDED",
       "cleanup_interval": "1.500s",
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "common_http_protocol_options": {
          "max_connection_duration": "0s",
          "max_requests_per_connection": 0
         },
         "use_downstream_protocol_config": {}
        }
       }
      },
      {
       "name": "ingress-cluster-tls",
       "type": "ORIGINAL_DST",
       "connect_timeout": "1s",
       "lb_policy": "CLUSTER_PROVIDED",
       "cleanup_interval": "1.500s",
       "transport_socket": {
        "name": "cilium.tls_wrapper"
       },
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "common_http_protocol_options": {
          "max_connection_duration": "0s",
          "max_requests_per_connection": 0
         },
         "upstream_http_protocol_options": {
          "auto_sni": true,
          "auto_san_validation": true
         },
         "use_downstream_protocol_config": {}
        }
       }
      },
      {
       "name": "xds-grpc-cilium",
       "type": "STATIC",
       "connect_timeout": "1s",
       "load_assignment": {
        "cluster_name": "xds-grpc-cilium",
        "endpoints": [
         {
          "lb_endpoints": [
           {
            "endpoint": {
             "address": {
              "pipe": {
               "path": "/var/run/cilium/xds.sock"
              }
             }
            }
           }
          ]
         }
        ]
       },
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "explicit_http_config": {
          "http2_protocol_options": {}
         }
        }
       }
      },
      {
       "name": "envoy-admin",
       "type": "STATIC",
       "connect_timeout": "1s",
       "load_assignment": {
        "cluster_name": "envoy-admin",
        "endpoints": [
         {
          "lb_endpoints": [
           {
            "endpoint": {
             "address": {
              "pipe": {
               "path": "/var/run/cilium/envoy-admin.sock"
              }
             }
            }
           }
          ]
         }
        ]
       }
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "api_config_source": {
       "api_type": "GRPC",
       "grpc_services": [
        {
         "envoy_grpc": {
          "cluster_name": "xds-grpc-cilium"
         }
        }
       ],
       "set_node_on_first_message_only": true,
       "transport_api_version": "V3"
      },
      "resource_api_version": "V3"
     },
     "cds_config": {
      "api_config_source": {
       "api_type": "GRPC",
       "grpc_services": [
        {
         "envoy_grpc": {
          "cluster_name": "xds-grpc-cilium"
         }
        }
       ],
       "set_node_on_first_message_only": true,
       "transport_api_version": "V3"
      },
      "resource_api_version": "V3"
     }
    },
    "admin": {
     "address": {
      "pipe": {
       "path": "/var/run/cilium/envoy-admin.sock"
      }
     }
    },
    "layered_runtime": {
     "layers": [
      {
       "name": "static_layer_0",
       "static_layer": {
        "overload": {
         "global_downstream_max_connections": 50000
        }
       }
      }
     ]
    }
   },
   "last_updated": "2022-11-15T07:50:55.527Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
   "static_clusters": [
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "egress-cluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "CLUSTER_PROVIDED",
      "cleanup_interval": "1.500s",
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "max_connection_duration": "0s",
         "max_requests_per_connection": 0
        },
        "use_downstream_protocol_config": {}
       }
      }
     },
     "last_updated": "2022-11-15T07:50:55.530Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "egress-cluster-tls",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "CLUSTER_PROVIDED",
      "cleanup_interval": "1.500s",
      "transport_socket": {
       "name": "cilium.tls_wrapper"
      },
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "max_connection_duration": "0s",
         "max_requests_per_connection": 0
        },
        "upstream_http_protocol_options": {
         "auto_sni": true,
         "auto_san_validation": true
        },
        "use_downstream_protocol_config": {}
       }
      }
     },
     "last_updated": "2022-11-15T07:50:55.530Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "envoy-admin",
      "type": "STATIC",
      "connect_timeout": "1s",
      "load_assignment": {
       "cluster_name": "envoy-admin",
       "endpoints": [
        {
         "lb_endpoints": [
          {
           "endpoint": {
            "address": {
             "pipe": {
              "path": "/var/run/cilium/envoy-admin.sock"
             }
            }
           }
          }
         ]
        }
       ]
      }
     },
     "last_updated": "2022-11-15T07:50:55.531Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "ingress-cluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "CLUSTER_PROVIDED",
      "cleanup_interval": "1.500s",
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "max_connection_duration": "0s",
         "max_requests_per_connection": 0
        },
        "use_downstream_protocol_config": {}
       }
      }
     },
     "last_updated": "2022-11-15T07:50:55.531Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "ingress-cluster-tls",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "CLUSTER_PROVIDED",
      "cleanup_interval": "1.500s",
      "transport_socket": {
       "name": "cilium.tls_wrapper"
      },
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "max_connection_duration": "0s",
         "max_requests_per_connection": 0
        },
        "upstream_http_protocol_options": {
         "auto_sni": true,
         "auto_san_validation": true
        },
        "use_downstream_protocol_config": {}
       }
      }
     },
     "last_updated": "2022-11-15T07:50:55.531Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "xds-grpc-cilium",
      "type": "STATIC",
      "connect_timeout": "1s",
      "load_assignment": {
       "cluster_name": "xds-grpc-cilium",
       "endpoints": [
        {
         "lb_endpoints": [
          {
           "endpoint": {
            "address": {
             "pipe": {
              "path": "/var/run/cilium/xds.sock"
             }
            }
           }
          }
         ]
        }
       ]
      },
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "explicit_http_config": {
         "http2_protocol_options": {}
        }
       }
      }
     },
     "last_updated": "2022-11-15T07:50:55.531Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.EndpointsConfigDump",
   "static_endpoint_configs": [
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "egress-cluster",
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "ingress-cluster",
      "endpoints": [
       {
        "locality": {},
        "lb_endpoints": [
         {
          "endpoint": {
           "address": {
            "socket_address": {
             "address": "10.1.1.24",
             "port_value": 8000
            }
           },
           "health_check_config": {},
           "hostname": "ingress-cluster10.1.1.24:8000"
          },
          "health_status": "HEALTHY",
          "load_balancing_weight": 1
         }
        ]
       },
       {
        "locality": {},
        "lb_endpoints": [
         {
          "endpoint": {
           "address": {
            "socket_address": {
             "address": "10.1.1.80",
             "port_value": 8000
            }
           },
           "health_check_config": {},
           "hostname": "ingress-cluster10.1.1.80:8000"
          },
          "health_status": "HEALTHY",
          "load_balancing_weight": 1
         }
        ]
       },
       {
        "locality": {},
        "lb_endpoints": [
         {
          "endpoint": {
           "address": {
            "socket_address": {
             "address": "10.1.1.143",
             "port_value": 8000
            }
           },
           "health_check_config": {},
           "hostname": "ingress-cluster10.1.1.143:8000"
          },
          "health_status": "HEALTHY",
          "load_balancing_weight": 1
         }
        ]
       }
      ],
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "ingress-cluster-tls",
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "envoy-admin",
      "endpoints": [
       {
        "locality": {},
        "lb_endpoints": [
         {
          "endpoint": {
           "address": {
            "pipe": {
             "path": "/var/run/cilium/envoy-admin.sock"
            }
           },
           "health_check_config": {}
          },
          "health_status": "HEALTHY",
          "load_balancing_weight": 1
         }
        ]
       }
      ],
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "egress-cluster-tls",
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "xds-grpc-cilium",
      "endpoints": [
       {
        "locality": {},
        "lb_endpoints": [
         {
          "endpoint": {
           "address": {
            "pipe": {
             "path": "/var/run/cilium/xds.sock"
            }
           },
           "health_check_config": {}
          },
          "health_status": "HEALTHY",
          "load_balancing_weight": 1
         }
        ]
       }
      ],
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
   "version_info": "2",
   "dynamic_listeners": [
    {
     "name": "cilium-http-ingress:17286",
     "active_state": {
      "version_info": "2",
      "listener": {
       "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
       "name": "cilium-http-ingress:17286",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 17286
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "cilium.network"
          },
          {
           "name": "envoy.filters.network.http_connection_manager",
           "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
            "stat_prefix": "proxy",
            "route_config": {
             "virtual_hosts": [
              {
               "name": "default_route",
               "domains": [
                "*"
               ],
               "routes": [
                {
                 "match": {
                  "prefix": "/",
                  "grpc": {}
                 },
                 "route": {
                  "cluster": "ingress-cluster",
                  "timeout": "3600s",
                  "retry_policy": {
                   "retry_on": "5xx",
                   "num_retries": 3,
                   "per_try_timeout": "0s"
                  },
                  "max_stream_duration": {
                   "grpc_timeout_header_max": "0s"
                  }
                 }
                },
                {
                 "match": {
                  "prefix": "/"
                 },
                 "route": {
                  "cluster": "ingress-cluster",
                  "timeout": "3600s",
                  "retry_policy": {
                   "retry_on": "5xx",
                   "num_retries": 3,
                   "per_try_timeout": "0s"
                  }
                 }
                }
               ]
              }
             ]
            },
            "http_filters": [
             {
              "name": "cilium.l7policy",
              "typed_config": {
               "@type": "type.googleapis.com/cilium.L7Policy",
               "access_log_path": "/var/run/cilium/access_log.sock"
              }
             },
             {
              "name": "envoy.filters.http.router"
             }
            ],
            "stream_idle_timeout": "0s",
            "normalize_path": true,
            "merge_slashes": true,
            "path_with_escaped_slashes_action": "UNESCAPE_AND_REDIRECT"
           }
          }
         ]
        },
        {
         "filter_chain_match": {
          "transport_protocol": "tls"
         },
         "filters": [
          {
           "name": "cilium.network"
          },
          {
           "name": "envoy.filters.network.http_connection_manager",
           "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
            "stat_prefix": "proxy",
            "route_config": {
             "virtual_hosts": [
              {
               "name": "default_route",
               "domains": [
                "*"
               ],
               "routes": [
                {
                 "match": {
                  "prefix": "/",
                  "grpc": {}
                 },
                 "route": {
                  "cluster": "ingress-cluster-tls",
                  "timeout": "3600s",
                  "retry_policy": {
                   "retry_on": "5xx",
                   "num_retries": 3,
                   "per_try_timeout": "0s"
                  },
                  "max_stream_duration": {
                   "grpc_timeout_header_max": "0s"
                  }
                 }
                },
                {
                 "match": {
                  "prefix": "/"
                 },
                 "route": {
                  "cluster": "ingress-cluster-tls",
                  "timeout": "3600s",
                  "retry_policy": {
                   "retry_on": "5xx",
                   "num_retries": 3,
                   "per_try_timeout": "0s"
                  }
                 }
                }
               ]
              }
             ]
            },
            "http_filters": [
             {
              "name": "cilium.l7policy",
              "typed_config": {
               "@type": "type.googleapis.com/cilium.L7Policy",
               "access_log_path": "/var/run/cilium/access_log.sock"
              }
             },
             {
              "name": "envoy.filters.http.router"
             }
            ],
            "stream_idle_timeout": "0s",
            "normalize_path": true,
            "merge_slashes": true,
            "path_with_escaped_slashes_action": "UNESCAPE_AND_REDIRECT"
           }
          }
         ],
         "transport_socket": {
          "name": "cilium.tls_wrapper"
         }
        }
       ],
       "listener_filters": [
        {
         "name": "envoy.filters.listener.tls_inspector"
        },
        {
         "name": "cilium.bpf_metadata",
         "typed_config": {
          "@type": "type.googleapis.com/cilium.BpfMetadata",
          "bpf_root": "/sys/fs/bpf",
          "is_ingress": true
         }
        }
       ],
       "transparent": true,
       "socket_options": [
        {
         "description": "Listener socket mark",
         "level": "1",
         "name": "36",
         "int_value": "2560"
        }
       ]
      },
      "last_updated": "2022-11-15T07:52:27.748Z"
     }
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
      "virtual_hosts": [
       {
        "name": "default_route",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/",
           "grpc": {}
          },
          "route": {
           "cluster": "ingress-cluster",
           "timeout": "3600s",
           "retry_policy": {
            "retry_on": "5xx",
            "num_retries": 3,
            "per_try_timeout": "0s"
           },
           "max_stream_duration": {
            "grpc_timeout_header_max": "0s"
           }
          }
         },
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "ingress-cluster",
           "timeout": "3600s",
           "retry_policy": {
            "retry_on": "5xx",
            "num_retries": 3,
            "per_try_timeout": "0s"
           }
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2022-11-15T07:52:27.666Z"
    },
    {
     "route_config": {
      "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
      "virtual_hosts": [
       {
        "name": "default_route",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/",
           "grpc": {}
          },
          "route": {
           "cluster": "ingress-cluster-tls",
           "timeout": "3600s",
           "retry_policy": {
            "retry_on": "5xx",
            "num_retries": 3,
            "per_try_timeout": "0s"
           },
           "max_stream_duration": {
            "grpc_timeout_header_max": "0s"
           }
          }
         },
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "ingress-cluster-tls",
           "timeout": "3600s",
           "retry_policy": {
            "retry_on": "5xx",
            "num_retries": 3,
            "per_try_timeout": "0s"
           }
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2022-11-15T07:52:27.668Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.SecretsConfigDump"
  }
 ]
}
