test/echo-prober-cilium-l7/echo-2-ep.json
[
  {
    "id": 270,
    "spec": {
      "label-configuration": {},
      "options": {
        "ConntrackAccounting": "Enabled",
        "ConntrackLocal": "Disabled",
        "Debug": "Disabled",
        "DebugLB": "Disabled",
        "DebugPolicy": "Enabled",
        "DropNotification": "Enabled",
        "MonitorAggregationLevel": "Medium",
        "PolicyAuditMode": "Disabled",
        "PolicyVerdictNotification": "Enabled",
        "TraceNotification": "Enabled"
      }
    },
    "status": {
      "controllers": [
        {
          "configuration": {
            "error-retry": true,
            "error-retry-base": "2s"
          },
          "name": "endpoint-270-regeneration-recovery",
          "status": {
            "last-failure-timestamp": "0001-01-01T00:00:00.000Z",
            "last-success-timestamp": "0001-01-01T00:00:00.000Z"
          },
          "uuid": "83458ee3-153a-4d16-8450-2254697987a4"
        },
        {
          "configuration": {
            "error-retry": true,
            "interval": "5m0s"
          },
          "name": "resolve-identity-270",
          "status": {
            "last-failure-timestamp": "0001-01-01T00:00:00.000Z",
            "last-success-timestamp": "2022-11-14T19:10:33.483Z",
            "success-count": 2
          },
          "uuid": "088d7aab-950d-4ee4-bff4-14cc79e32e21"
        },
        {
          "configuration": {
            "error-retry": true,
            "interval": "1m0s"
          },
          "name": "sync-policymap-270",
          "status": {
            "last-failure-timestamp": "0001-01-01T00:00:00.000Z",
            "last-success-timestamp": "2022-11-14T19:10:35.448Z",
            "success-count": 8
          },
          "uuid": "e41390b0-8fa9-48a5-a977-2fa152f8c6d4"
        },
        {
          "configuration": {
            "error-retry": true,
            "interval": "10s"
          },
          "name": "sync-to-k8s-ciliumendpoint (270)",
          "status": {
            "last-failure-timestamp": "0001-01-01T00:00:00.000Z",
            "last-success-timestamp": "2022-11-14T19:10:53.510Z",
            "success-count": 34
          },
          "uuid": "976391b6-8a47-4c09-92bc-1e2f1158e782"
        }
      ],
      "external-identifiers": {
        "container-id": "ec79bfcd133624b9f07dcb4fc0d2364b608b6b70e1fbdf7c2eb2fcf3cab0e633",
        "k8s-namespace": "echo-cilium-2",
        "k8s-pod-name": "echo-2-888859f7b-m5zx6",
        "pod-name": "echo-cilium-2/echo-2-888859f7b-m5zx6"
      },
      "health": {
        "bpf": "OK",
        "connected": true,
        "overallHealth": "OK",
        "policy": "OK"
      },
      "identity": {
        "id": 99723,
        "labels": [
          "k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name=echo-cilium-2",
          "k8s:io.kubernetes.pod.namespace=echo-cilium-2",
          "k8s:io.cilium.k8s.policy.serviceaccount=echo-2",
          "k8s:io.cilium.k8s.policy.cluster=dev0",
          "k8s:app=echo",
          "k8s:version=v1"
        ]
      },
      "labels": {
        "derived": [
          "k8s:pod-template-hash=888859f7b"
        ],
        "realized": {},
        "security-relevant": [
          "k8s:app=echo",
          "k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name=echo-cilium-2",
          "k8s:io.cilium.k8s.policy.cluster=dev0",
          "k8s:io.cilium.k8s.policy.serviceaccount=echo-2",
          "k8s:io.kubernetes.pod.namespace=echo-cilium-2",
          "k8s:version=v1"
        ]
      },
      "log": [
        {
          "code": "OK",
          "message": "Successfully regenerated endpoint program (Reason: )",
          "state": "ready",
          "timestamp": "2022-11-14T19:05:35Z"
        }
      ],
      "namedPorts": [
        {
          "name": "http",
          "port": 8000,
          "protocol": "TCP"
        },
        {
          "name": "https",
          "port": 8443,
          "protocol": "TCP"
        },
        {
          "name": "tcp",
          "port": 1234,
          "protocol": "TCP"
        }
      ],
      "networking": {
        "addressing": [
          {
            "ipv4": "10.1.1.81"
          }
        ],
        "host-mac": "4a:91:f1:69:fb:99",
        "interface-index": 14,
        "interface-name": "lxc44e1e59553fb",
        "mac": "5e:4e:be:7b:5c:d5"
      },
      "policy": {
        "proxy-policy-revision": 3,
        "proxy-statistics": [
          {
            "allocated-proxy-port": 18675,
            "location": "ingress",
            "port": 8000,
            "protocol": "http",
            "statistics": {
              "requests": {},
              "responses": {}
            }
          }
        ],
        "realized": {
          "allowed-egress-identities": [
            0
          ],
          "allowed-ingress-identities": [
            1
          ],
          "build": 3,
          "denied-egress-identities": null,
          "denied-ingress-identities": null,
          "id": 99723,
          "l4": {
            "egress": [],
            "ingress": [
              {
                "derived-from-rules": [
                  [
                    "k8s:io.cilium.k8s.policy.derived-from=CiliumNetworkPolicy",
                    "k8s:io.cilium.k8s.policy.name=cnp-test-2",
                    "k8s:io.cilium.k8s.policy.namespace=echo-cilium-2",
                    "k8s:io.cilium.k8s.policy.uid=8ea7e10a-75de-469b-89f8-6c3b5d37a486"
                  ]
                ],
                "rule": {
		  "l7-rules": [
		    {
		      "\u0026LabelSelector{MatchLabels:map[string]string{reserved.host: ,},MatchExpressions:[]LabelSelectorRequirement{},}": null
		    },
		    {
		      "\u0026LabelSelector{MatchLabels:map[string]string{},MatchExpressions:[]LabelSelectorRequirement{},}": {
		        "http": [
		          {
		            "method": "GET",
		            "path": "/zhopa"
		          }
		        ]
		      }
		    }
		  ],
		  "port": 8000,
		  "protocol": "TCP"
		}
              }
            ]
          },
          "policy-enabled": "ingress",
          "policy-revision": 3
        },
        "spec": {
          "allowed-egress-identities": [
            0
          ],
          "allowed-ingress-identities": [
            1
          ],
          "build": 3,
          "denied-egress-identities": null,
          "denied-ingress-identities": null,
          "id": 99723,
          "l4": {
            "egress": [],
            "ingress": [
              {
                "derived-from-rules": [
                  [
                    "k8s:io.cilium.k8s.policy.derived-from=CiliumNetworkPolicy",
                    "k8s:io.cilium.k8s.policy.name=cnp-test-2",
                    "k8s:io.cilium.k8s.policy.namespace=echo-cilium-2",
                    "k8s:io.cilium.k8s.policy.uid=8ea7e10a-75de-469b-89f8-6c3b5d37a486"
                  ]
                ],
                "rule": {
		  "l7-rules": [
		    {
		      "\u0026LabelSelector{MatchLabels:map[string]string{reserved.host: ,},MatchExpressions:[]LabelSelectorRequirement{},}": null
		    },
		    {
		      "\u0026LabelSelector{MatchLabels:map[string]string{},MatchExpressions:[]LabelSelectorRequirement{},}": {
		        "http": [
		          {
		            "method": "GET",
		            "path": "/zhopa"
		          }
		        ]
		      }
		    }
		  ],
		  "port": 8000,
		  "protocol": "TCP"
		}
              }
            ]
          },
          "policy-enabled": "ingress",
          "policy-revision": 3
        }
      },
      "realized": {
        "label-configuration": {},
        "options": {
          "ConntrackAccounting": "Enabled",
          "ConntrackLocal": "Disabled",
          "Debug": "Disabled",
          "DebugLB": "Disabled",
          "DebugPolicy": "Enabled",
          "DropNotification": "Enabled",
          "MonitorAggregationLevel": "Medium",
          "PolicyAuditMode": "Disabled",
          "PolicyVerdictNotification": "Enabled",
          "TraceNotification": "Enabled"
        }
      },
      "state": "ready"
    }
  }
]
