test/echo-prober-cilium-l7/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

commonAnnotations:
  xcxc: asdasda

resources:
  - ./echo
  # - ./echo-2
  # - ./echo-3
  - ./prober
